' Cropped diagrams per slide (PlantUML)
' Render each @startuml block separately

@startuml Slide2_IAM
skinparam classAttributeIconSize 0
skinparam linetype ortho

enum UserType <<Enumeration>> {
  Guest
  Registered
  Staff
}

class Role {
  +roleId : String
  +roleName : String
  +description : String
}

class Staff {
  +staffId : String
  +name : String
  +email : String
}

class User {
  +uid : String
  +userName : String
  +email : String
  +password : String
  +userType : UserType
}

Role "1" -- "0..*" Staff
Staff "1" -- "0..1" User
@enduml
@startuml Slide3_Knowledge
skinparam classAttributeIconSize 0
skinparam linetype ortho

class Character {
  +characterId : String
  +name : String
  +background : Text
  +image : String
  +personality : String(500)
}

class CharacterDocument {
  +docId : String
  +title : String
  +content : Text
  +uploadDate : DateTime
}

class HistoricalContext {
  +contextId : String
  +name : String
  +description : Text
}

class HistoricalContextDocument {
  +docId : String
  +title : String
  +content : Text
  +uploadDate : DateTime
}

HistoricalContext "1" -- "0..*" Character
Character "1" -- "0..*" CharacterDocument
HistoricalContext "1" -- "0..*" HistoricalContextDocument
@enduml
@startuml Slide4_Flow_Assessment
skinparam classAttributeIconSize 0
skinparam linetype ortho

class User {
  +uid : String
}

class ChatSession {
  +sessionId : String
  +createDate : DateTime
}

class Message {
  +messageId : String
  +content : Text
  +isFromBot : Boolean
  +timestamp : DateTime
}

class Quiz {
  +quizId : String
  +title : String
}

class Question {
  +questionId : String
  +content : Text
  +options : Text
  +correctAnswer : String
}

class QuizResult {
  +resultId : String
  +score : Int
  +takenDate : DateTime
}

class QuizAnswerDetail {
  +detailId : String
  +selectedOption : String
  +isCorrect : Boolean
}

User "1" -- "0..*" ChatSession
ChatSession "1" -- "1..*" Message
User "1" -- "0..*" QuizResult
Quiz "1" -- "1..*" Question
Quiz "1" -- "0..*" QuizResult
QuizResult "1" -- "1..*" QuizAnswerDetail
QuizAnswerDetail "*" -- "1" Question
@enduml